k8s/redis/insight/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  namespace: redis
  labels:
    app: redisinsight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      priorityClassName: "critical-monitoring"
      securityContext:
        runAsUser: 1002
        runAsGroup: 2002
        runAsNonRoot: true
        fsGroup: 3002
        supplementalGroups: []
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
      - name:  redisinsight
        image: redis/redisinsight:2.70.1
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
        volumeMounts:
        - name: redisinsight
          mountPath: /data
        ports:
        - containerPort: 5540
          protocol: TCP
      volumes:
      - name: redisinsight
        emptyDir: {}
