k8s/redis/insight/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redisinsight-service
  namespace: redis
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5540
  selector:
    app: redisinsight
